# cathar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  deny.toml  justfile
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: book.yml  ci.yml  release.yml
book/: README.md  book.toml
book/src/: 01-digital-sound.md  02-two-views.md  03-the-toolbox.md  04-noise.md  05-hum.md  06-clicks-clipping.md  07-reverb.md  08-sibilance.md  09-wind-pops-rustle.md  10-loudness.md  11-resampling.md  12-stereo.md  13-vs-industry.md  14-glossary.md  15-vinyl-digitization.md  16-dequantization.md  17-time-and-pitch.md  18-wow-and-flutter.md  19-separation-and-modeling.md  20-playback-deemphasis.md  SUMMARY.md  preface.md
crates/cathar/: Cargo.toml
crates/cathar-cli/: Cargo.toml  build.rs
crates/cathar-cli/src/: banner.rs  main.rs  player.rs  termcolor.rs  tui.rs
crates/cathar-gui/: Cargo.toml
crates/cathar-gui/src/: app.rs  axes.rs  colormap.rs  engine.rs  fonts.rs  histogram.rs  icons.rs  main.rs  native_menu.rs  panel.rs  spectral_edit.rs  spectro.rs  theme.rs  visualizer.rs
crates/cathar/src/: adehum.rs  align.rs  analysis.rs  audio.rs  cqt.rs  decrackle.rs  deemphasis.rs  denoise.rs  denoiser.safetensors  dequant.rs  dewow.rs  digitize.rs  edit.rs  enhance.rs  error.rs  filter.rs  hpss.rs  inpaint.rs  lib.rs  loudness.rs  ml.rs  pitch.rs  resample.rs  restore.rs  sms.rs  spectrum.rs  timestretch.rs  util.rs  wpe.rs
crates/cathar/tests/: golden.rs
crates/cathar/tests/golden/: format_test.flac
crates/tersus/: Cargo.toml
crates/tersus-cli/: Cargo.toml
crates/tersus-cli/src/: main.rs
crates/tersus/src/: lib.rs
docs/: algorithm-specs.md  banner.html
scripts/: compare_sox.sh  release.sh  train_denoiser.py
