[package]
name = "cathar-cli"
version = "0.1.0"
description = "Command-line interface for cathar."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The binary is named after the project (not `-cli`), so `cathar ...`
# is the command users run. CI archives this binary by repository name.
[[bin]]
name = "cathar"
path = "src/main.rs"

[features]
default = []
ml = ["cathar/ml"]

[lints]
workspace = true

[dependencies]
cathar = { workspace = true }
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
