[package]
name = "cathar-cli"
version = "0.4.1"
description = "Audio restoration CLI in pure Rust — denoise, de-hum, de-click, de-clip, de-reverb, normalise, and more."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["audio", "denoise", "restoration", "cli", "dsp"]
categories = ["command-line-utilities", "multimedia::audio"]

# The binary is named after the project (not `-cli`), so `cathar ...`
# is the command users run. CI archives this binary by repository name.
[[bin]]
name = "cathar"
path = "src/main.rs"

[features]
default = []
ml = ["cathar/ml"]

[lints]
workspace = true

[dependencies]
cathar = { workspace = true }
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
