[package]
name = "cathar-cli"
version = "0.6.0"
description = "Audio restoration CLI in pure Rust — denoise, de-hum, de-click, de-clip, de-reverb, normalise, and more."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["audio", "denoise", "restoration", "cli", "dsp"]
categories = ["command-line-utilities", "multimedia::audio"]

# The binary is named after the project (not `-cli`), so `cathar ...`
# is the command users run. CI archives this binary by repository name.
# `doc = false`: the bin target is also named `cathar`, which would collide with
# the `cathar` lib's rustdoc output dir under a workspace `cargo doc` (cargo
# #6313). A CLI binary has no useful rustdoc, so skip it.
[[bin]]
name = "cathar"
path = "src/main.rs"
doc = false

[build-dependencies]
image.workspace = true

[features]
default = []
ml = ["cathar/ml"]
# Optional interactive terminal UI: spectrogram viewer (`view`) + a Winamp-style
# player/visualizer (`play`). Pulls in ratatui (render) and rodio (playback).
tui = ["dep:ratatui", "dep:rodio"]

[lints]
workspace = true

[dependencies]
cathar = { workspace = true }
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
ratatui = { version = "0.30.0", optional = true }
rodio = { version = "0.22.2", default-features = false, features = ["playback"], optional = true }
