[package]
name = "cathar-gui"
version = "0.7.0"
description = "Spectral audio editor GUI for Cathar — pure-Rust restoration front-end with its own visual identity."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["audio", "restoration", "spectrogram", "gui", "dsp"]
categories = ["multimedia::audio"]

# Binary is named `Cathar` (not `cathar-gui`) so the macOS menu bar / Dock
# show the product name when launched unbundled via `cargo run`.
[[bin]]
name = "Cathar"
path = "src/main.rs"
doc = false

[lints]
workspace = true

[dependencies]
cathar = { workspace = true }
anyhow.workspace = true
realfft.workspace = true
# Decode the bundled logo PNG for the empty-state splash.
image.workspace = true
# Immediate-mode GUI (pure Rust; winit + wgpu, no C/FFI, no pkg-config).
eframe = "0.29"
egui = "0.29"
# Font parsing/validation (same crate egui rasterises with) — used to verify a
# system font file loads before we hand it to egui.
ab_glyph = "0.2"
# Native file open/save dialogs.
rfd = "0.15"
# OS-native application menus (macOS menu bar / Windows window menu).
# default-features off: avoid pulling GTK on non-Linux hosts.
muda = { version = "0.19", default-features = false }
raw-window-handle = "0.6"
# Same winit as eframe — needed for EventLoopBuilderExtMacOS (disable default menu).
winit = "0.30"
# System audio playback — same engine the CLI `play` command uses.
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
egui-phosphor = "0.7.3"
# Console Ctrl+C → hard exit (eframe may not wake; cpal/rodio Drop can hang on Windows).
ctrlc = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# Set NSProcessInfo process name so the menu bar shows "Cathar", not the crate id.
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSProcessInfo",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
] }
