[package]
name = "tersus-cli"
version = "0.1.0"
description = "Command-line interface for tersus."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The binary is named after the project (not `-cli`), so `tersus ...`
# is the command users run. CI archives this binary by repository name.
[[bin]]
name = "tersus"
path = "src/main.rs"

[features]
default = []
ort = ["tersus/ort"]

[lints]
workspace = true

[dependencies]
tersus = { workspace = true }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
